# Telli-Livekit-Hack

./: .env.example  .gitignore  CLAUDE.md  PLATFORM-BUILD-PROMPT.md  PLATFORM-CORRECTION-PROMPT.md  README.md  SEAM.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  skills-lock.json  stylist-engine-algorithm.md
.agents/skills/livekit-simulations/: SKILL.md
apps/agent/: .env.example  README.md  pyproject.toml
apps/agent/src/: agent.py
apps/agent/src/style_concierge/: __init__.py  mock_services.py
apps/agent/tests/: test_agent_product_selection.py  test_mock_services.py
apps/web/: next.config.mjs  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: storefront-shell.tsx  style-concierge-chat.tsx
catalog-store/: store.json
design/: .thumbnail  Voice Commerce.dc.html
docs/: livekit-notes.md
platform/: __init__.py  catalog.py  db.py  ingest.py
platform/tests/: support.py  test_catalog.py  test_db.py  test_ingest.py
scripts/: dev.sh
stylist/: __init__.py  _color.py  _openai.py  analyze.py  demo.py  recommend.py  rules.py  schemas.py  serve.py  tryon.py
stylist/catalog/: __init__.py  enriched.json  sample_catalog.json
stylist/examples/: catalog_product.json  match_profile.json  options.json  style_profile.json  tryon_result.json
stylist/simulations/: README.md  __init__.py  scenarios.py
stylist/tests/: test_analyze.py  test_catalog.py  test_color.py  test_demo.py  test_e2e.py  test_recommend.py  test_rules.py  test_schemas.py  test_seam.py  test_simulations.py  test_tryon.py
(+40 files in other folders)
